--- a/Linear Structure/.vscode/launch.json
+++ b/Linear Structure/.vscode/launch.json
@@ -9,9 +9,9 @@
       "stopAtEntry": false,
       "externalConsole": true,
       "cwd": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure",
-      "program": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure/build/Debug/outDebug",
+      "program": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure/stack.exe",
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb",
+      "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
