--- a/Linear Structure/.vscode/launch.json
+++ b/Linear Structure/.vscode/launch.json
@@ -2,6 +2,31 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "(gdb) Launch",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure/stack.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "gdb",
+      "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+      "setupCommands": [
+          {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+          },
+          {
+              "description": "Set Disassembly Flavor to Intel",
+              "text": "-gdb-set disassembly-flavor intel",
+              "ignoreFailures": true
+          }
+      ]
+    },
+    {
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
@@ -9,9 +34,9 @@
       "stopAtEntry": false,
       "externalConsole": true,
       "cwd": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure",
-      "program": "c:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure/stack.exe",
+      "program": "C:/Users/arbut/OneDrive/Desktop/School/SPRING 2024 UCO/Advanced Data Structures and Algorithms/Practice/Linear Structure/stack.exe",
       "MIMode": "gdb",
-      "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
+      "miDebuggerPath": "gdb",
       "setupCommands": [
         {
           "description": "Enable pretty-printing for gdb",
